--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/x-icon" href="/favicon.ico" />
-    <link rel="apple-touch-icon" href="/icon-192.png" />
+    <link rel="apple-touch-icon" href="/icon-192.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="高機能なポリリズム対応メトロノーム。複数パターンの組み合わせ、テンポカーブ、プリセット機能を搭載。音楽練習に最適なWebアプリ。" />
     <meta name="keywords" content="メトロノーム,ポリリズム,音楽,練習,テンポ,リズム,楽器" />
