--- a/public/privacy-policy.html
+++ b/public/privacy-policy.html
@@ -39,7 +39,7 @@
 <body>
     <div class="container">
         <h1>プライバシーポリシー</h1>
-        <p><strong>最終更新日：2024年12月9日</strong></p>
+        <p><strong>最終更新日：2025年6月9日</strong></p>
         
         <h2>1. はじめに</h2>
         <p>カスタムメトロノーム（以下「本アプリ」）は、ユーザーのプライバシーを尊重し、個人情報の保護に努めます。本プライバシーポリシーは、本アプリがどのような情報を収集し、どのように使用するかを説明するものです。</p>
@@ -91,8 +91,8 @@
         <h2>10. お問い合わせ</h2>
         <div class="contact">
             <p>本プライバシーポリシーに関するご質問やご不明点がございましたら、以下の連絡先までお問い合わせください。</p>
-            <p><strong>連絡先：</strong> [あなたのメールアドレス]</p>
-            <p><strong>運営者：</strong> [あなたの名前または組織名]</p>
+            <p><strong>連絡先：</strong> hayano1992@gmail.com</p>
+            <p><strong>運営者：</strong> 早野 哲平</p>
         </div>
         
         <hr style="margin: 30px 0;">
